# oop_exercise_08

./: CMakeLists.txt  README.md  factory.cpp  factory.h  figure.h  hexagon.cpp  hexagon.h  main.cpp  octagon.cpp  octagon.h  pentagon.cpp  pentagon.h  point.cpp  point.h  processor.cpp  processor.h  report.doc  subscriber.cpp  subscriber.h  test_01.res  test_01.test  test_02.res  test_02.test  ~$report.doc
